<resources>
  <string name="app_name">odauday</string>
  <string name="action_settings">Settings</string>
  <string name="txt_email">Email</string>
  <string name="txt_password">Password</string>
  <string name="txt_login">Login</string>
  <string name="txt_or">Or</string>
  <string name="txt_login_with_facebook">Login with facebook</string>
  <string name="txt_register">Register</string>
  <string name="txt_forgot_password">Forgot Password</string>
  <string name="message_email_is_required">Email is required</string>
  <string name="message_password_is_required">Password is required</string>
  <string name="message_email_is_invalid">Email is invalid</string>
  <string name="message_already_has_account">Already has account! Login here</string>
  <string name="txt_display_name">Display name</string>
  <string name="message_display_name_is_required">Display name is required</string>
  <string name="message_re_password_do_not_match">Re-password do not match</string>
  <string name="message_re_password_is_required">Re-password is required</string>
  <string name="content_description_default">image</string>
  <string name="txt_re_password">Re-Password</string>
  <string name="message_tap_to_retry">Network error. Tap here to retry.</string>
  <string name="facebook_app_id">608460789487323</string>
  <string name="fb_login_protocol_scheme">fb608460789487323</string>
  <string name="message_registration_failed">Account registration failed. Please try later !</string>
  <string name="message_service_unavailable">Sorry! This service is not available, Please try again</string>
  <string name="txt_submit">Submit</string>
  <string name="flat_nav_bar_title_alert">Alerts</string>
  <string name="flat_nav_bar_title_more">More</string>
  <string name="flat_nav_bar_title_saved_search">Saved</string>
  <string name="flat_nav_bar_title_search">Search</string>
  <string name="flat_nav_bar_title_favorite">Favorite</string>
  <string name="txt_list_view">List view</string>
  <string name="txt_map_view">Map view</string>
  <string name="txt_search">Search</string>
  <string name="txt_search_type">Search Type</string>
  <string name="txt_rent">Rent</string>
  <string name="txt_buy">Buy</string>
  <string name="txt_all">All</string>
  <string name="txt_any">Any</string>
  <string name="txt_filter_price">Price</string>
  <string name="txt_filter_price_rate">(x1000 VND)</string>
  <string name="txt_filter_location">Location</string>
  <string name="txt_filter_size">Size</string>
  <string name="txt_filter_property_type">Property Type</string>
  <string name="txt_filter_num_of_bedroom">Bedrooms</string>
  <string name="txt_filter_num_of_bathroom">Bathrooms</string>
  <string name="txt_filter_num_of_parking">Parking</string>
  <string name="txt_filter_tags">Tags</string>
  <string name="txt_map_area">Map area</string>
  <string name="txt_filter_more_options">More options</string>
  <string name="txt_filter_less_options">Less options</string>
  <string name="txt_done">Done</string>
  <string name="txt_min">Min</string>
  <string name="txt_max">Max</string>
  <string name="message_max_value_less_than_min_value">Max value cannot be less than min value</string>
  <string name="property_type_house">House</string>
  <string name="property_type_apartment">Apartment</string>
  <string name="property_type_land">Land</string>
  <string name="property_type_level_1">First-Level house</string>
  <string name="property_type_level_2">Second-Level house</string>
  <string name="property_type_level_3">Third-Level house</string>
  <string name="property_type_level_4">Four-Level house</string>
  <string name="txt_property_type">Property Type</string>
  <string name="txt_tags_hint">eg. study, pool, george st, etc</string>
  <string name="txt_recent_tag">Recent Tags</string>
  <string name="txt_or_less">or less</string>
  <string name="txt_or_more">or more</string>
  <string name="txt_to">To</string>
  <string name="txt_rent_per_month">Price (per month)</string>
  <string name="title_activity_maps">Map</string>
  <string name="txt_dialog_title_map_type">Map type</string>
  <string name="message_permission_location_request">Application want to know your geoLocation.</string>
  <string name="message_location_services_disabled">Location services disabled</string>
  <string name="txt_settings">Settings</string>
  <string name="message_waiting_for_location">Waiting for geoLocation...</string>
  <string name="message_cannot_find_your_location">Can not find your geoLocation !</string>
  <string name="message_cannot_connect_to_service">Cannot connect to Service</string>
  <string name="message_no_internet_access">No Internet Access. Please check your network connection</string>
  <string name="txt_no_search_results">Too specific</string>
  <string name="txt_empty_search_subtitle">We could not find any properties matching your criteria. Tap to retry</string>
  <string name="txt_filter_all_case">FILTER</string>
  <string name="txt_save_upper_case">SAVE</string>
  <string name="txt_sort_upper_cast">SORT</string>
  <string name="txt_no_properties_found">No properties found. Zoom out or change your criteria.</string>
  <string name="txt_of">of</string>
  <string name="txt_no_parking">No parking</string>
  <string name="txt_no">No</string>
  <string name="txt_studio">Studio</string>
  <string name="txt_at">At</string>
  <string name="txt_bedrooms">Bedrooms</string>
  <string name="txt_bathrooms">Bathrooms</string>
  <string name="txt_parking">Parking</string>
  <string name="txt_reset_filter">Reset filter</string>
  <string name="txt_sugguesstion_place">Suggestion</string>
  <string name="txt_recent_place">Recent Search</string>
  <string name="message_some_thing_went_wrong_when_find_place">Something went wrong when finding place. Please try later :((</string>
  <string name="txt_wait_a_second">Wait a second...</string>
  <string name="message_are_u_sure_to_delete_this_item">Are you sure you want to delete this item?</string>
  <string name="txt_map_is_locked">Map is locked</string>
  <string name="txt_save_search_heading">Save your search</string>
  <string name="txt_save">Save</string>
  <string name="txt_back">Back</string>
  <string name="txt_next">Next</string>
  <string name="txt_address">Address</string>
  <string name="txt_click_to_select_address">Tap to select address on map</string>
  <string name="txt_click_to_select_property_type">Tap to select category</string>
  <string name="txt_price">Price</string>
  <string name="txt_phone_number">Phone Number</string>
  <string name="txt_phone">Phone</string>
  <string name="txt_add_property_step">Add Property (%1$s/%2$s)</string>
  <string name="txt_land_size">Land size</string>
  <string name="txt_description">Description</string>
  <string name="txt_choose_image">Click to choose image</string>
  <string name="txt_select_location">Select Location</string>
  <string name="message_location_is_required">Address is required</string>
  <string name="message_category_is_required">Category is required</string>
  <string name="message_price_is_reuiqred">Price is required</string>
  <string name="message_land_size_is_required">Land size is required</string>
  <string name="message_bedroom_is_required">Bedroom is required</string>
  <string name="message_bathroom_is_required">Bathroom is required</string>
  <string name="message_parking_is_required">Parking is required</string>
  <string name="txt_folder">Folder</string>
  <string name="txt_tap_to_select_image">Tap to select image</string>
  <string name="txt_no_album">No Album</string>
  <string name="txt_selected_with_max_limit">%d selected</string>
  <string name="txt_selected_with_limit">%1$d/%2$d selected</string>
  <string name="action_sort_by">Sort By</string>
  <string name="action_sort_a_z">A-Z</string>
  <string name="action_sort_z_a">Z-A</string>
  <string name="action_sort_date_added">Date Added</string>
  <string name="message_permission_read_request">This app will need to read external storage to display image on your device</string>
  <string name="txt_gallery">Gallery</string>
  <string name="message_phone_is_required">Phone is required</string>
  <string name="message_phone_is_invalid">Phone number is invalid</string>
  <string name="message_cannot_find_that_location_please_try_later">Can not find that location. Please try later !</string>
  <string name="txt_sortlist">SortList</string>
  <string name="txt_last_added">Last Added</string>
  <string name="txt_lowest_price">Lowest Price</string>
  <string name="txt_highest_price">Highest Price</string>
  <string name="txt_empty_shortlist">Empty Shortlist</string>
  <string name="txt_shortlist">Shortlist</string>
  <string name="txt_note_empty_shortlist">No properties have been shortlisted yet. Shortlist properties by tapping the star icon.</string>
  <string name="error_favorite">Cannot get favorite on Service</string>
  <string name="empty_favorite">Empty favorite</string>
  <string name="txt_progress">Please Wait....</string>
  <string name="txt_latitude">Lat:</string>
  <string name="txt_longitude">Long:</string>
  <string name="txt_notification">Notification</string>
  <string name="txt_delete">Delete</string>
  <string name="txt_recent_saved_search"><![CDATA[Recent & Saved Searches]]></string>
  <string name="txt_empty_saved_search">Save your favorite searches!</string>
  <string name="txt_note_empty_saved_search">Save searches by tapping the overflow and the menu button. Make sure you\'re logged in.</string>
  <string name="empty_recent_saved_search">Empty saved search</string>
  <string name="txt_saved_search">Saved Searches</string>
  <string name="txt_recent_search">Recent Searches</string>
  <string name="cannot_remove_saved_search">Cannot remove saved search.</string>
  <string name="cannot_uncheck_favorites">Cannot uncheck favorites</string>
  <string name="label_share_favorite">Share Shortlisted properties with a friend.</string>
  <string name="txt_email_friend">Friend\'s Email Address</string>
  <string name="txt_your_name">Your Name</string>
  <string name="txt_your_email">Your Email</string>
  <string name="txt_from">From</string>
  <string name="send_email">Send Email</string>
  <string name="empty_email_friend">Empty email friend</string>
  <string name="empty_your_name">Empty your name</string>
  <string name="empty_your_email">Empty your email</string>
  <string name="error_share_favorite">Cannot share favorite</string>
  <string name="txt_service_unvailable">Service Unavailable</string>
  <string name="property_manager">Property Manager</string>
  <string name="filter">Filter</string>
  <string name="txt_rent_property">RENT</string>
  <string name="empty_property">Empty properties</string>
  <string name="txt_empty_property">Empty property</string>
  <string name="txt_edit">Edit</string>
  <string name="txt_mark_the_end">Mark the end</string>
  <string name="txt_reuse">Reuse</string>
  <string name="txt_add_extends_time">Add extends time</string>
  <string name="cannot_delete_property">Cannot delete property</string>
  <string name="txt_version">v1.0.0.0</string>
  <string name="post_news">Post news</string>
  <string name="settings">Settings</string>
  <string name="txt_language">Language</string>
  <string name="txt_clear_history">Clear history</string>
  <string name="txt_logout">Log out</string>
  <string name="txt_your_account">Your account</string>
  <string name="txt_about_us">About us</string>
  <string name="txt_privacy_policy">Privacy policy</string>
  <string name="txt_conditions_of_use">Conditions of use</string>
  <string name="txt_information">Information</string>
  <string name="txt_app_version">App version</string>
  <string name="txt_name">Name</string>
  <string name="txt_message_optional">Message (Optional)</string>
  <string name="txt_enquiry_form">Enquiry form</string>
  <string name="txt_from_email">Your email</string>
  <string name="txt_send_mail">Send</string>
</resources>