<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="8dp"
  android:background="@color/white"
  app:elevation="2dp">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:orientation="vertical">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="24dp"
      android:singleLine="true"
      android:text="@string/txt_enquiry_form"
      android:textColor="@color/black"
      android:textSize="20sp" />
    <TextView
      android:id="@+id/enquiry_form_starter_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:textColor="#747c8a"
      android:textSize="14sp" />
    <View
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="#eaebed" />
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="8dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:orientation="vertical" />
    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp">
      <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_message_optional"
        android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
      android:id="@+id/text_input_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp">
      <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_name"
        android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
      android:id="@+id/text_input_phone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp">
      <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_phone"
        android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <EditText
      android:id="@+id/to_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:focusable="false"
      android:hint="@string/txt_email"
      android:layout_marginTop="12dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
      android:id="@+id/text_input_from_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp">
      <EditText
        android:id="@+id/from_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_from_email"

        android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <Button
      android:id="@+id/send_email"
      style="@style/Widget.Button.Flat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:background="@color/alert_red"
      android:text="@string/txt_send_mail"
      android:textColor="@color/white" />
  </LinearLayout>
</android.support.v7.widget.CardView>
