<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>

  </data>
  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="30dp"
    android:background="@color/color_background_login"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <include
      android:id="@+id/btn_back"
      layout="@layout/layout_back_button_black"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="15dp"/>
    <LinearLayout
      android:id="@+id/main_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="25dp"
      android:paddingLeft="50dp"
      android:paddingRight="50dp"
      android:orientation="vertical">

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/content_description_default"
        android:src="@{@drawable/logo}"/>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/txt_email"
          android:inputType="textEmailAddress"
          android:textColor="#303030"
          android:textSize="20sp"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText
          android:id="@+id/display_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/txt_display_name"
          android:inputType="text"
          android:textColor="#303030"
          android:textSize="20sp"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/txt_password"
          android:inputType="textPassword"
          android:textColor="#303030"
          android:textSize="20sp"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_input_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText
          android:id="@+id/re_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/txt_re_password"
          android:inputType="textPassword"
          android:textColor="#303030"
          android:textSize="20sp"/>
      </android.support.design.widget.TextInputLayout>


      <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:background="#2DB84C"
        android:onClick="register"
        android:text="@string/txt_register"
        android:textColor="@color/color_text_login"
        android:textSize="15sp"/>
      <android.support.v7.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background_login"
        android:gravity="center"
        android:onClick="login"
        android:text="@string/message_already_has_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"/>
    </LinearLayout>

    <com.odauday.ui.view.MyProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/btn_back"
      android:visibility="gone"/>
  </RelativeLayout>

</layout>